--- a/DATA/Site/style/accueil.css
+++ b/DATA/Site/style/accueil.css
@@ -50,7 +50,6 @@
 	background-color: #fefefe;
 	box-shadow: 0 1px 2px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
 	border-radius: 3px;
-	padding-bottom:  10px;
 
 }
 
@@ -60,7 +59,6 @@
 {
 	float:right;
 	margin-right: 22.5%;
-	min-width: 250px;
 	margin-left: 0%;
 	width:20%;
 	margin-top:0;
@@ -107,17 +105,14 @@
 
 #boxCoursAccueil{box-shadow: inset 0px 0px 30px 0px #e1e1e1;}
 
-#boxTutoratAccueil{background:linear-gradient(-45deg, #ffffff 25%, #d9d9d9 25%, #d9d9d9 50%, #ffffff 50%, #ffffff 75%, #d9d9d9 75%, #d9d9d9);background-size:6px 6px;overflow: hidden;}
-#boxTutoratAccueil h3 { margin: 0;color: #ffa500}
-#boxTutoratAccueil ul {list-style-type: none; padding: 0; }
-#boxTutoratAccueil .dateTutorat{margin: auto;text-align: center;font-size:20px;}
-#boxTutoratAccueil .heureDebut,#boxTutoratAccueil .heureFin {display: inline;margin:5px;}
+#boxTutoratAccueil{background:linear-gradient(-45deg, #ffffff 25%, #f1f1f1 25%, #f1f1f1 50%, #ffffff 50%, #ffffff 75%, #f1f1f1 75%, #f1f1f1);background-size:6px 6px;}
 
 #boxCoursAccueil:hover,#boxTutoratAccueil:hover{background:#f6f6f6;transition:0.5s;box-shadow: inset 0px 0px 30px 0px #b1b1b1;}
 
 #boxCoursAccueil h2 {color:#FFA500;margin:0px;margin-top:40px; font-size: 1.2em;}
 
 #boxCoursAccueil p {Margin-top:10px;margin-bottom:1px;}
+
 
 .matiere
 {
@@ -170,6 +165,6 @@
 
 #bulle h3 {background:#353535; margin: 0;color: #ffa500}
 #bulle ul {list-style-type: none; padding: 0; text-align: left;}
-.botBulleGauche{position:absolute;bottom: 0;right: 5px;opacity: 0.5;font-size: 12px;}
-.botBulleDroit{position:absolute;bottom: 0;left: 5px;opacity: 0.5;font-size: 12px;}
-.pseudoTopic{margin-top:15px;text-align: left;font-size: 12px;}
+.botBulleGauche{position:absolute;bottom: 0;right: 5px;opacity: 0.5}
+.botBulleDroit{position:absolute;bottom: 0;left: 5px;opacity: 0.5}
+.pseudoTopic{margin-top:15px;text-align: left;margin-bottom:}
