--- a/DATA/Site/style/moncompte.css
+++ b/DATA/Site/style/moncompte.css
@@ -32,10 +32,16 @@
 #boxInfoUser ul
 {
   list-style-type: none;
-  font-size: 12pt;
   padding: 0;
   text-align: left;
   line-height: 30px;
+}
+
+#boxInfoUser ul li
+{
+	font-size:1em;
+	margin:0;
+	padding:0;
 }
 
 
@@ -53,13 +59,6 @@
 	font-size: 25PX;
 	margin-top:10%;
 	margin-bottom:2%;
-}
-#OUTILS
-{
-	
-  
-
-
 }
 
 .input{
@@ -103,11 +102,15 @@
 	opacity:1;
 }
 
-;
+h2
+{
+	margin-top:0;
+	margin-bottom:3%;
+	font-size:2.5em;
+}
 
 #mailtel
 {
-	font-size: 14PX;
 	font-weight: bold;
 	
 }
