--- a/DATA/Site/style/moyenne.css
+++ b/DATA/Site/style/moyenne.css
@@ -1,26 +1,28 @@
 #CorpMoyenne{
-	
-
-font-family:SourceSansProRegular;
- width:45%;
-  min-width: 40%;
-   box-shadow: 0 1px 2px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
-  border-radius: 2px ;
-  box-sizing: border-box;
-  background: #ffffff$$;
-  color: #434343;
- 
-  margin:auto;
-  margin-top:2%;
-  padding:30px;
+	float:left;
+	font-family:SourceSansProRegular;
+	width:40%;
+	box-shadow: 0 1px 2px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+	border-radius: 2px ;
+	box-sizing: border-box;
+	background: #ffffff$$;
+	color: #434343;
+	margin-left:30%;
 	text-align:center;
+	padding-top:1%;
+	padding-bottom:1%;
+}
 
+#corp{
+	margin-top:0px;
+	padding:5% 0% 10% 0%;
+	overflow:hidden;
+	font-family:SourceSansProRegular;
 }
 
 table{
 	margin:auto;
 }
-
 
 input[type=number] {
  width:100px;
@@ -28,6 +30,12 @@ input[type=number] {
  color: #FFA500; 
  cursor:pointer;
  }
+.UEnull{
+ font-weight: bold;
+ color: red;
+ font-size: 1.3em;
+ 
+}
  
 .UE{
  font-weight: bold;
@@ -37,11 +45,13 @@ input[type=number] {
 }
 
 th{
-	font-size: 25PX;
+	font-size: 1.5em;
 }
 
 h1 {
-	font-size : 42px;
+	font-size : 3em;
+	margin-top:3%;
+	margin-bottom:3%;
 }
 
 .retour{
@@ -58,18 +68,47 @@ h1 {
     -moz-border-radius: 3px;
     font-weight: bold;
 }
-.Soumettre{
-border: none;
-   padding: 8px 15px 8px 15px;
-    margin: 6px;
-  
-   
-    box-shadow: 1px 1px 4px #DADADA;
-    -moz-box-shadow: 1px 1px 4px #DADADA;
-    -webkit-box-shadow: 1px 1px 4px #DADADA;
-    border-radius: 3px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    font-weight: bold;
+
+#submit
+{
+	border: none;
+	padding: 2% 3% 2% 3%;
+	margin-bottom:5%;
+	background: #FFA500;
+	color:  white;
+	cursor: pointer;
 	
+	box-shadow: 1px 1px 4px #DADADA;
+	-moz-box-shadow: 1px 1px 4px #DADADA;
+	-webkit-box-shadow: 1px 1px 4px #DADADA;
+	
+	border-radius: 3px;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	
+	font-weight: bold;
+	text-decoration:none;
+	width:40%;
+	opacity:0.8;
+	width:80%;
+	font-size:1.2em;
+	transition-duration: 0.2s;
+}
+
+#submit:hover
+{
+	opacity:1;
+}
+
+#retour a
+{
+	text-decoration:none;
+	color:#FFA500;
+	opacity:0.8;
+	transition-duration: 0.2s;
+}
+
+#retour a:hover
+{
+	opacity:1;
 }
