--- a/DATA/Site/style/moncompte.css
+++ b/DATA/Site/style/moncompte.css
@@ -223,13 +223,13 @@ select
 	opacity:1;
 }
 
-#coursTopics
+#news
 {
 	margin-left:75%;
 	width:15%;
 }
 
-.coursConsultes , .topicsConsultes
+.ressources , .forum, .tutorat
 {
   width: 100%;
   height: 100px;
@@ -238,13 +238,14 @@ select
   background: #ffffff;
   margin:auto;
   margin-top:0;
-  margin-bottom: 20px;
+  margin-bottom: 10%;
   box-shadow: 0 1px 2px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
-  border-radius: 2px;
+  border-radius: 1.5%;
 }
 
-.coursConsultes h3 , .topicsConsultes h3{
+.ressources h3 , .forum h3, .tutorat h3{
 	margin-top: 0px; 
 	background: 
 	#353535;color:
-	#ffffff;}
+	#ffffff;
+	}
