--- a/DATA/Site/style/moncompte.css
+++ b/DATA/Site/style/moncompte.css
@@ -243,9 +243,56 @@ select
   border-radius: 1.5%;
 }
 
-.ressources h3 , .forum h3, .tutorat h3{
-	margin-top: 0px; 
+.ressources h3 , .forum h3, .tutorat h3
+{
+	margin: 0px;
 	background: 
-	#353535;color:
+	#353535;
+	color:
 	#ffffff;
-	}
+}
+
+.ressources ul, .forum ul, .tutorat ul
+{
+	padding:1%;
+	margin:0;
+	margin-top:2.5%;
+	padding-bottom:2.5%;
+	border-bottom:1px solid black;
+}
+
+.ressources li, .forum li, .tutorat li
+{
+	list-style-type:none;
+	text-align:justify;
+	padding:2%;
+	color: #434343;
+	style:none;
+}
+
+.titre_bulle
+{
+	font-weight:bold;
+}
+
+.date
+{
+	font-style:italic;
+	font-size:0.9em;
+}
+
+.sujet
+{
+	font-size:0.8em;
+	font-weight:bold;
+}
+
+.nom_sujet
+{
+	color:#FFA500;
+}
+
+.ressources a, .forum a, .tutorat a
+{
+	text-decoration:none;
+}
