--- a/DATA/Site/style/moncompte.css
+++ b/DATA/Site/style/moncompte.css
@@ -28,6 +28,7 @@
 	float:left;
 	list-style-type:none;
 	background-color:#FFA500;
+	transition-duration:0.2s;
 }
 
 #navbox a
@@ -53,13 +54,19 @@
   width:40%;
   box-sizing: border-box;
   overflow: hidden;
-  background: #ffffff$$;
+  background: #ffffff;
   color: #434343;
   float:left;
   margin-left:30%;
   padding:1% 2.5% 1% 2.5%;
   box-shadow: 0 1px 2px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
   border-radius: 2px ;
+}
+
+h1 {
+	font-size : 3em;
+	margin-top:3%;
+	margin-bottom:3%;
 }
 
 h2
@@ -354,4 +361,30 @@ select
 	color:#FFA500;
 	font-weight:bold;
 	font-size:0.9em;
+}
+
+/*---------------------------Moyenne------------------------------*/
+
+table{
+	margin:auto;
+}
+
+.note {
+ width:100px;
+ margin-left:5px;
+ color: #FFA500; 
+ cursor:pointer;
+ }
+.UEnull{
+ font-weight: bold;
+ color: red;
+ font-size: 1.3em;
+ 
+}
+ 
+.UE{
+ font-weight: bold;
+ color: #FFA500;
+ font-size: 1.3em;
+ 
 }
