--- a/DATA/Site/style/moyenne.css
+++ b/DATA/Site/style/moyenne.css
@@ -40,6 +40,7 @@
 	float:left;
 	list-style-type:none;
 	background-color:#FFA500;
+	transition-duration:0.2s;
 }
 
 #navbox a
@@ -64,7 +65,7 @@ table{
 	margin:auto;
 }
 
-input[type=number] {
+.note {
  width:100px;
  margin-left:5px;
  color: #FFA500; 
