--- a/DATA/Site/style/moncompte.css
+++ b/DATA/Site/style/moncompte.css
@@ -398,3 +398,35 @@ table{
  font-size: 1.3em;
  
 }
+
+/*---------------------------Stats------------------------------*/
+
+.stats
+{
+	font-weight:bold;
+	font-size:3em;
+	margin:5%;
+	margin-bottom:0;
+}
+
+.der_act
+{
+	font-weight:bold;
+	font-size:1.5em;
+	margin:1%;
+	margin-bottom:0;
+}
+
+#stats h3
+{
+	font-size:1.5em;
+	color:white;
+	background-color:#FFA500;
+	padding:1%;
+	opacity:0.7;
+}
+
+#stats li
+{
+	margin-bottom:5%;
+}
