--- a/DATA/Site/style/moncompte.css
+++ b/DATA/Site/style/moncompte.css
@@ -85,23 +85,34 @@ h2
 	margin-bottom:2%;
 }
 
-.no_pseudo, .no_pseudo_modif
+.no_pseudo
 {
 	font-size:2em;
 	margin-top:2%;
-}
+	margin-bottom:5%;
+	margin-left:30%;
+	padding-top:8%;
+	padding-bottom:8%;
+	background: linear-gradient(#f9f9f9, #f9f9f9	)  ;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	border-radius:2px;
+	box-shadow: 0 1px 2px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12) inset;
+}	
 
-.no_pseudo_modif{
+.no_pseudo_modif
+{
+	font-size:2em;
+	margin-top:2%;
 	margin-bottom:5%;
 }
 
 .usr
 {
-  float: left;
-  margin-right:5%;
-  margin-top: 0px;
-  text-align:left;
-  width:50%;
+	float: left;
+	margin:0;
+	margin-top:2%;
+	text-align:left;
 }
 
 .usr_modif
@@ -121,6 +132,28 @@ h2
   text-align: left;
   margin-top:0;
   line-height: 30px;
+}
+
+#boxInfoUser h3
+{
+	font-size:1.4em;
+	color:white;
+	background-color:#FFA500;
+	padding:1%;
+	opacity:0.7;
+	margin-top:7%;
+	margin-bottom:2%;
+}
+
+.label
+{
+	margin-bottom:2%;
+}
+
+.info
+{
+	font-weight:bold;
+	font-size:1.1em;
 }
 
 form
@@ -144,11 +177,6 @@ li p
 #checkbox
 {
 	text-align:center;
-}
-
-#statut
-{
-	margin-top:2%;
 }
 
 input[type="text"],input[type="email"],input[type="tel"],input[type="number"], select{
