--- a/DATA/Site/style/moncompte.css
+++ b/DATA/Site/style/moncompte.css
@@ -73,6 +73,30 @@
   border-radius: 2px ;
 }
 
+
+#boxInfoUser ul
+{
+  list-style-type: none;
+  padding: 0;
+  text-align: left;
+  margin-top:0;
+  line-height: 30px;
+}
+
+.usr
+{
+	width:45%;
+	float:left;
+	margin-top:6.5%;
+	text-align:center;
+}
+
+.usr_side
+{
+	width:45%;
+	float:right;
+}
+
 h1 {
 	font-size : 3em;
 	margin-top:3%;
@@ -85,142 +109,65 @@ h2
 	margin-bottom:2%;
 }
 
-.no_pseudo
+#nom_profil
 {
-	font-size:2em;
-	margin-top:2%;
-	margin-bottom:5%;
-	margin-left:30%;
-	padding-top:8%;
-	padding-bottom:8%;
-	background: linear-gradient(#f9f9f9, #f9f9f9	)  ;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	border-radius:2px;
-	box-shadow: 0 1px 2px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12) inset;
-}	
-
-.no_pseudo_modif
-{
-	font-size:2em;
-	margin-top:2%;
-	margin-bottom:5%;
+	font-size:3em;
+	margin-top:0%;
+	margin-bottom:8%;
 }
 
-.usr
+#prenom
 {
-	float: left;
-	margin:0;
-	margin-top:2%;
-	text-align:left;
+	font-size:0.5em;
 }
 
-.usr_modif
-{
-  float: right;
-  margin-left:0%;
-  margin-top: 5%;
-  margin-bottom: 0%;
-  text-align:right;
-  width:45%;
-}
-
-#boxInfoUser ul
-{
-  list-style-type: none;
-  padding: 0;
-  text-align: left;
-  margin-top:0;
-  line-height: 30px;
-}
-
-#boxInfoUser h3
+#contacts_titre, #infos_titre, #outils_titre
 {
 	font-size:1.4em;
 	color:white;
 	background-color:#FFA500;
 	padding:1%;
+	text-align:center;
 	opacity:0.7;
-	margin-top:7%;
+	margin-top:15%;
 	margin-bottom:2%;
+	cursor:pointer;
 }
 
-.label
+#usr_info p
 {
-	margin-bottom:2%;
-}
-
-.info
-{
-	font-weight:bold;
-	font-size:1.1em;
-}
-
-form
-{
+	font-size:0.9em;
 	margin:0;
 	padding:0;
 }
 
-li p
+#usr_info a
 {
-	margin:0;
-	font-size:1em;
+	text-decoration:none;
+	color:#434343;
+	font-weight:bold;
 }
 
-#modif_ul li p, #checkbox
+#usr_info a:hover
 {
-	margin-top:3%;
-	font-size:0.8em;
+	color:#FFA500;
 }
 
-#checkbox
+#contacts, #infos_perso, #outils
 {
-	text-align:center;
+	display:none;
 }
 
-input[type="text"],input[type="email"],input[type="tel"],input[type="number"], select{
-	border: none;
-   	padding: 1% 1.8% 1% 1.8%;
-    margin: 0;
-    
-    box-shadow: 1px 1px 4px #DADADA;
-    -moz-box-shadow: 1px 1px 4px #DADADA;
-    -webkit-box-shadow: 1px 1px 4px #DADADA;
-    
-    border-radius: 3px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    
-    font-size:1.2em;
-}
-
-#imgInput{
-	margin:0;
-	width:94%;
-}
-
-.short_input
+#outils a
 {
-	width:48%;
+	text-decoration:none;
+	color:#434343;
+	font-weight:bold;
 }
 
-select
+#outils a:hover
 {
-	width:51.5%;
-}
-
-.long_input
-{
-	width:96%;
-}
-
-.precisions
-{
-	font-size: 0.6em;
-	margin-top:5%;
-	text-align:left;
-	margin-bottom:5%;
+	color:#FFA500;
 }
 
 #submit
@@ -255,24 +202,14 @@ select
 	opacity:1;
 }
 
-.outils
+#confirm
 {
+	font-size:0.8em;
 	font-weight:bold;
-	font-size:1.2em;
-	margin-bottom:2%;
+	color:red;
 }
 
-.outils a
-{
-	text-decoration:none;
-	color:#434343;
-	transition-duration:0.2s;
-}
-
-a:hover
-{
-	color:#FFA500;
-}
+/*---------------------------News------------------------------*/
 
 #news
 {
@@ -363,6 +300,92 @@ a:hover
 	color:#FFA500;
 	font-weight:bold;
 	font-size:0.9em;
+}
+
+/*---------------------------Modifier------------------------------*/
+
+.titre_modif
+{
+	font-size:2em;
+	margin-top:2%;
+	margin-bottom:5%;
+}
+
+.usr_modif
+{
+  float: right;
+  margin-left:0%;
+  margin-top: 5%;
+  margin-bottom: 0%;
+  text-align:right;
+  width:45%;
+}
+
+form
+{
+	margin:0;
+	padding:0;
+}
+
+li p
+{
+	margin:0;
+	font-size:1em;
+}
+
+#modif_ul li p, #checkbox
+{
+	margin-top:3%;
+	font-size:0.8em;
+}
+
+#checkbox
+{
+	text-align:center;
+}
+
+input[type="text"],input[type="email"],input[type="tel"],input[type="number"], select{
+	border: none;
+   	padding: 1% 1.8% 1% 1.8%;
+    margin: 0;
+    
+    box-shadow: 1px 1px 4px #DADADA;
+    -moz-box-shadow: 1px 1px 4px #DADADA;
+    -webkit-box-shadow: 1px 1px 4px #DADADA;
+    
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    
+    font-size:1.2em;
+}
+
+#imgInput{
+	margin:0;
+	width:94%;
+}
+
+.short_input
+{
+	width:48%;
+}
+
+select
+{
+	width:51.5%;
+}
+
+.long_input
+{
+	width:96%;
+}
+
+.precisions
+{
+	font-size: 0.6em;
+	margin-top:5%;
+	text-align:left;
+	margin-bottom:5%;
 }
 
 /*---------------------------Moyenne------------------------------*/
