--- a/DATA/Site/style/header.css
+++ b/DATA/Site/style/header.css
@@ -47,13 +47,13 @@ nav a {text-decoration: none; color:#2c2c2c}
 .bh2
 {
 	float:right;
-	margin-right:20%;
+	margin-right:10%;
 	padding-left:5px;
 	padding-right: 5px;
 	height:100%;
 	line-height:40px;
 	text-decoration:none;
-	width: 120px;
+	width: 10%;
 }
 
 
