Corrections mineures, première refonte du formulaire absolu

--- a/DATA/Site/style/cours.css
+++ b/DATA/Site/style/cours.css
@@ -6,7 +6,7 @@
 {
 	width:70%;
 	margin:auto;
-	margin-top:3%;
+	margin-top:4%;
 	margin-bottom:4%;
 	overflow:hidden;
 }
@@ -87,7 +87,7 @@ h2
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 1em;
     cursor: pointer;
 	opacity:0.7;
 	transition-duration: 0.4s;
@@ -196,7 +196,7 @@ h2
 #tablecours
 {
     border-collapse: collapse;
-	width:75%;
+	width:70%;
 	margin-left:20%;
 	text-align:left;
 	color: #434343;
@@ -230,7 +230,7 @@ h2
 
 .nom_ressource
 {
-	width:60%;
+	width:55%;
 }
 
 #formulaire
@@ -254,9 +254,9 @@ h2
 	margin-left:0.2%;
 }
 
-input[type="file"]
+#input_fichier_relatif
 {
-	margin-top:0.4%;
+	margin-top:0.7%;
 	width:80%;
 }
 
@@ -264,6 +264,7 @@ input[type="image"]
 {
 	height:40px;
 	opacity:0.5;
+	transition-duration: 0.2s;
 }
 
 .icone
@@ -289,4 +290,32 @@ input[type="image"]
 	opacity:0.5;
 	transition-duration: 0.2s;
 	margin:0;
+}
+
+.poubelle:hover, input[type="image"]:hover, input[type="submit"]:hover
+{
+	opacity:1;
+}
+
+#input_fichier_absolu
+{
+	width:30%;
+	text-align:center;
+	margin-top:2%;
+}
+
+input[type="submit"]
+{
+	width:30%;
+	background-color: #FFA500;
+    border: none;
+    color: white;
+    padding: 9px 20px;
+    text-align: center;
+    text-decoration: none;
+    margin-top:5%;
+    font-size: 1em;
+    cursor: pointer;
+	opacity:0.7;
+	transition-duration: 0.4s;
 }
